# internal/model/fossil.go
@@ -14,14 +14,13 @@ type Fossil struct {
 }
 
 type FossilGetResponse struct {
-	IDFossil       uint      `gorm:"type:serial;primarykey" json:"id_fossil"`
+	IDFossil       uint      `json:"id_fossil"`
 	Species        string    `json:"species"`
 	CreationDate   time.Time `json:"creation_date"`
 	FormationDate  time.Time `json:"formation_date"`
 	CompletionDate time.Time `json:"completion_date"`
 	Status         string    `json:"status"`
-	FullName       string    `json:"full_name"`
-	Period         []Period  `json:"periods"`
+	Periods        []Period  `json:"periods"`
 }
 
 type FossilUpdateSpeciesRequest struct {
